ocaml/testsuite/tests/typing-layouts-products/unboxed_tuples_stable.compilers.reference
File "unboxed_tuples.ml", line 45, characters 22-28:
45 | let print_ints prefix #(x,y) = Printf.printf "%s: #(%d,%d)\n" prefix x y
                           ^^^^^^
Error: This construct requires the beta version of the extension "layouts", which is disabled and cannot be used
